# FIFA-Prompt-Wars-4

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agents/: README.md  data-points.md  mistakes.md  persona.md  requirements.md
docs/: example-genai-answer.md
src/matchday_ops/: __init__.py  cli.py  config.py  knowledge.py  models.py  ops.py  reasoning.py  telemetry.py  tools.py
src/matchday_ops/data/: incidents.json  phrases.json  sources.json  stadium.json  transit.json  zones.json
tests/: test_cli.py  test_knowledge.py  test_ops.py  test_reasoning.py  test_telemetry.py  test_tools.py
web/: index.html
